@startuml ghibli

Film "1" o-- "0..*" Character
Film "1" o-- "0..*" Vehicle
Vehicle "1" <-- "1" Character: pilota
Studio "1" o-- "0..*" Film

class Film {
   - str title
   - str release_year
   - str director
   + to_dictionary(): Dictionary
}

class Character {
   - str name
   - str gender
   - str age
   + to_dictionary(): Dictionary
}

class Vehicle {
    + str id
    + str name
    + to_dictionary(): Dictionary
}

note as N1
    Los getters y setters son omitidos
    por claridad en el código.
    Tampoco añadimos los métodos equals y toString
end note

@enduml